<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textAlignment="viewStart" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/nameLayout">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/emailLayout">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25dp"
            android:layout_marginRight="20dp"
            android:hint="@string/phone"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/phoneLayout">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textSize="25dp"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password2Layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/passwordLayout">

        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25dp"
            android:layout_marginRight="20dp"
            android:hint="@string/repass"
            android:inputType="textPassword" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/password2Layout"
        android:layout_height="150dp">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/registerBtn"
            android:textAllCaps="true"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="150dp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:fontFamily="sans-serif-black"
            android:text="@string/cancelBtn"
            android:textAllCaps="true"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="150dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>